tests/fixtures/apps/apps/smoke-data/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smoke-data-prod
  labels:
    platform.swhurl.com/managed: 'true'
    platform.swhurl.com/app: smoke-data
    platform.swhurl.com/environment: prod
    platform.swhurl.com/exposure: private
    platform.swhurl.com/team: platform
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
